--- a/index.html
+++ b/index.html
@@ -52,6 +52,39 @@
    </header>
 
    <!-- SECTIONS PART -->
+     <main>
+         <section>
+               <div class="hero-section flex warpper gap-4">
+                <div class="content">
+                    <h1>
+                        Enjoy Your Delicious 
+                        <span>Food</span>
+                    </h1>
+                    <p class="para">We will fill your tummy with delicious <br>
+                      food with fast delivery.
+                    </p>
+                    <div class="flex gap-2">
+                        <a href="#" class="btn">Order now</a>
+                        <a href="#" class="social-icon">
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="Food Delivery Website Images/delivery-boy - Copy (2).png" >
+                </div>
+               </div> 
+         </section>
+
 
    <main>
 
@@ -62,4 +95,5 @@
 
     </footer>
 </body>
+
 </html>
